# bootstrapping-hackathon

./: .gitignore  .replit  CLAUDE.md  package.json  pyproject.toml  replit.md
attached_assets/: Pasted--Prompt-Make-the-UI-Minimalist-and-Beautiful-You-are-redesigning-the-frontend-UI-for-a-project-ca-1760806611240_1760806611241.txt  Pasted--Prompt-for-the-AI-Frontend-Builder-You-are-building-the-frontend-for-a-hackathon-project-called-1760806127448_1760806127449.txt  Pasted-Fix-Search-Contact-Status-Filter-and-Study-Type-Filter-Supabase-UI-placement-intuitive-not-nex-1760820538946_1760820538947.txt  Pasted-Perfect-here-s-a-single-copy-paste-build-prompt-that-removes-OpenAI-keeps-everything-S-1760813746605_1760813746607.txt  Pasted-Perfect-here-s-the-final-compact-and-professional-prompt-you-can-paste-directly-into-your-AI--1760811817233_1760811817233.txt  Pasted-Refine-Dashboard-Around-Qualified-Condition-Qualified-Study-Type-Qualified-Condition-Qualified--1760815975554_1760815975554.txt  Pasted-Refine-Dashboard-Around-Qualified-Condition-Qualified-Study-Type-Qualified-Condition-Qualified--1760817520744_1760817520745.txt
backend/: .env.example  .gitignore  main.py  migrate_supabase.py  models.py  pyproject.toml
backend/agents/outbound/: outbound_agent.py
backend/api/: routes.py
backend/services/: livekit_service.py  supabase_service.py
frontend/bootstrapping-hackathon/: package-lock.json  package.json
frontend/bootstrapping-hackathon/app/: globals.css  layout.tsx  page.tsx
frontend/bootstrapping-hackathon/components/: Header.tsx  ImportCSV.tsx  (+2 more)
(+7 files in other folders)
