[project]
name = "backend"
version = "0.1.0"
description = "Clinical trial recruitment telephony agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "livekit>=0.17.0",
    "livekit-agents>=0.9.0",
    "livekit-plugins-deepgram>=0.6.0",
    "livekit-plugins-openai>=0.7.0",
    "livekit-plugins-cartesia>=0.2.0",
    "livekit-plugins-silero>=0.6.0",
    "livekit-plugins-noise-cancellation>=0.1.0",
    "python-dotenv>=1.0.0",
]
